<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashCadastroActivity">

    <TextView
        android:id="@+id/cadprof_subtitulo"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/splashcad_subtitulo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/cadprof_subtitulo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/splashcad_alt_img"
        android:src="@drawable/medical_records" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadprof_subtitulo"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/splashcad_descricao"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickDepois"
            android:text="@string/splashcad_btn_depois"
            android:textColor="@android:color/white" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickCriarConta"
            android:text="@string/splashcad_btn_criar_conta"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>
