<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/item_paciente_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="avatar"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_avatar" />

    <TextView
        android:id="@+id/item_paciente_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/item_paciente_avatar"
        android:text="@string/itm_paciente_nome"
        android:textAllCaps="true"
        android:textColor="@android:color/primary_text_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_paciente_nome"
        android:layout_toStartOf="@id/item_paciente_avatar"
        android:divider="?android:listDivider"
        android:dividerPadding="10dp"
        android:orientation="horizontal"
        android:showDividers="beginning|middle|end">

        <TextView
            android:id="@+id/item_paciente_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/itm_paciente_placeholder_genero" />

        <TextView
            android:id="@+id/item_paciente_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/itm_paciente_placeholder_idade" />

        <TextView
            android:id="@+id/item_paciente_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itm_paciente_placeholder_nascimento" />

    </LinearLayout>

</RelativeLayout>