<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jralison.anestweb.LoginActivity">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:drawableTop="@drawable/doctor"
        android:text="@string/login_subtitulo" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt_crm" />

    <EditText
        android:id="@+id/login_input_crm"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textNoSuggestions"
        android:textAllCaps="true" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt_senha" />

    <EditText
        android:id="@+id/login_input_senha"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn_entrar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="onClickLogin"
        android:text="@string/login_btn_entrar" />

</LinearLayout>
